# clean-evals

./: .editorconfig  .env.example  .gitignore  .pre-commit-config.yaml  API.md  BRANDING.md  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  Makefile  README.md  SECURITY.md  docker-compose.yml  mkdocs.yml  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug.md  feature.md
.github/workflows/: ci.yml  codeql.yml  docs.yml  publish.yml
docs/docs/: api.md  branding.md  cli.md  flow.md  getting-started.md  index.md
docs/docs/concepts/: adapters.md  datasets.md  recommendations.md  reporters.md  scorers.md
docs/docs/guides/: cost-ceilings.md  dataset-builder.md  deployment.md  pii.md  telemetry.md  writing-a-reporter.md  writing-a-scorer.md  writing-an-adapter.md
docs/docs/stylesheets/: extra.css
docs/overrides/: main.html
examples/: README.md
examples/email_rewrite/: inputs.csv
examples/json_extraction/: dataset.yml
examples/sentiment/: dataset.yml
examples/summary_quality/: dataset.yml
examples/telemetry/: structured.jsonl  transcripts.jsonl
examples/ticket_triage/: inputs.csv  inputs.jsonl
src/clean_evals/: __init__.py  calibration.py  candidates.py  capabilities.py  cli.py  connectivity.py  errors.py  eval_service.py  exclusions.py  jobs.py  model_metadata.py  models.py  pricing.py  pricing_feeds.py  prompting.py  protocols.py  registry.py  runner.py  starter.py  suggestions.py  telemetry.py  telemetry_service.py
src/clean_evals/_internal/: __init__.py  events.py  recommendations.py  stats.py  version.py
src/clean_evals/adapters/: __init__.py  _base.py  anthropic.py  google.py  local.py  openai.py  openrouter.py
src/clean_evals/queue/: __init__.py  app.py  events.py  schedule.py  tasks.py
src/clean_evals/reporters/: __init__.py  console.py  diff.py  jsonl.py  junit.py  markdown.py
src/clean_evals/scorers/: __init__.py  exact_match.py  json_field_match.py  llm_judge.py
src/clean_evals/storage/: __init__.py  artifacts.py  db.py  repo.py
src/clean_evals/storage/migrations/: __init__.py  alembic.ini  env.py  runner.py
src/clean_evals/storage/migrations/versions/: 20260429_0001_initial_schema.py  20260701_0002_golden_path.py  20260703_0003_jobs.py  20260710_0004_telemetry.py  20260710_0005_classified_at.py
src/clean_evals/web/: __init__.py  app.py  builder.py  deps.py  schemas.py
src/clean_evals/web/api/: __init__.py  builder.py  datasets.py  events.py  goldenpath.py  models.py  runs.py  schedules.py  telemetry.py
tests/: conftest.py
tests/integration/: conftest.py  test_cli.py  test_migrations.py  test_queue.py  test_telemetry_flow.py  test_web_flow.py
tests/unit/: test_adapters.py  test_base_helpers.py  test_cli.py  test_db_default.py  test_examples_load.py  test_goldenpath.py  test_jobs.py  test_llm_judge.py  test_model_metadata.py  test_models.py  test_models_and_inline_run.py  test_pricing.py  test_pricing_overrides.py  test_prompting.py  test_recommendations.py  test_registry.py  test_reporters.py  test_runner.py  test_scorers.py  test_starter.py  test_stats.py  test_storage.py  test_telemetry.py  test_telemetry_service.py  test_web_api.py  test_web_api_telemetry.py
web/: .gitignore  index.html  package-lock.json  package.json  playwright.config.ts  tailwind.config.js  vite.config.ts
web/e2e/: app.spec.ts  fake-provider.mjs  golden-path.spec.ts
web/e2e/fixtures/: sentiment.csv  tickets.csv
web/src/: App.tsx  main.tsx
web/src/components/: DatasetSettings.tsx  Layout.tsx  Logo.tsx  ModelParamsEditor.tsx  ModelPicker.tsx  RunLauncher.tsx  SuggestModels.tsx
web/src/components/ui/: Badge.tsx  Button.tsx  Card.tsx  Spinner.tsx  Table.tsx
web/src/lib/: api.ts  modelParams.ts  theme.ts  utils.ts
web/src/pages/: CostProjectionPage.tsx  DatasetBuilderPage.tsx  DatasetsPage.tsx  LiveRunPage.tsx  ModelsPage.tsx  RunDetailPage.tsx  RunsPage.tsx  SchedulesPage.tsx  TelemetryMonitorPage.tsx  TelemetryPage.tsx
web/src/styles/: globals.css
web/src/test/: utils.test.tsx
